--- a/index.html
+++ b/index.html
@@ -7,30 +7,34 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
-    <title>Document</title>
+    <title>Easy</title>
 
     <link rel="stylesheet" href="style.css">
     <script src="index.js" defer></script>
 </head>
 <body>
-    <div class="container-fluid text-center">
-        <h1 class="display-1" id="bingo">BINGO</h1>
-        <div class="row justify-content-center">
-            <div class="col-9 col-md-6 col-lg-6 col-xl-4">
-                <p class="lead fs-3" id="problem"></p>
-                <div class="input-group mb-3">
-                    <input id="answer-input" type="number" class="form-control" placeholder="ใส่คำตอบ">
-                    <button class="btn btn-outline-secondary" type="button" id="check-answer">ส่งคำตอบ</button>
-                </div>
+    <div class="d-flex flex-column min-vh-100 justify-content-center align-items-center text-center">
+        <h1 class="display-4">เลือกระดับ</h1>
+        <div class="row align-items-center">
+            <div class="col-12 col-md-6 d-flex justify-content-center py-3">
+                <a href="./easy.html" class="text-decoration-none">
+                    <div class="card shadow" style="width: 18rem;">
+                        <div class="card-body">
+                            <h5 class="card-title">ง่าย</h5>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-12 col-md-6 d-flex justify-content-center py-3">
+                <a href="./hard.html" class="text-decoration-none">
+                    <div class="card shadow" style="width: 18rem;">
+                        <div class="card-body">
+                            <h5 class="card-title">ยาก</h5>
+                        </div>
+                    </div>
+                </a>
             </div>
         </div>
-        <div class="row justify-content-center">
-            <table id="tblBingo"></table>
-        </div>
-        
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
