match all to min

--- a/easy.html
+++ b/easy.html
@@ -13,7 +13,7 @@
     <script src="easy.js" defer></script>
 </head>
 <body>
-    <div class="container-fluid text-center">
+    <div class="container-fluid text-center fireworks">
         <h1 class="display-1" id="bingo">BINGO</h1>
         <div class="row justify-content-center">
             <div class="col-9 col-md-6 col-lg-6 col-xl-4">
@@ -34,5 +34,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdn.jsdelivr.net/npm/fireworks-js@2.x/dist/index.umd.js"></script>
 </body>
 </html>
