--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a href="./easy.html" class="text-decoration-none">
                     <div class="card shadow" style="width: 18rem;">
                         <div class="card-body">
-                            <h5 class="card-title">ง่าย</h5>
+                            <h5 class="card-title">Level 1</h5>
                         </div>
                     </div>
                 </a>
@@ -29,7 +29,7 @@
                 <a href="./hard.html" class="text-decoration-none">
                     <div class="card shadow" style="width: 18rem;">
                         <div class="card-body">
-                            <h5 class="card-title">ยาก</h5>
+                            <h5 class="card-title">Level 2</h5>
                         </div>
                     </div>
                 </a>
