--- a/easy.html
+++ b/easy.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Easy</title>
 
     <link rel="stylesheet" href="style.css">
@@ -14,7 +14,11 @@
 </head>
 <body>
     <div class="container-fluid text-center fireworks">
-        <h1 class="display-1" id="bingo">BINGO</h1>
+        <h1 class="display-1" id="bingo">LKS PLUS</h1>
+        <div>
+            <i style="color: blue" class="fa fa-diamond"></i>
+            <span id="diamond">0</span>
+        </div>
         <div class="row justify-content-center">
             <div class="col-9 col-md-6 col-lg-6 col-xl-4">
                 <p class="lead fs-3" id="problem"></p>
@@ -28,7 +32,10 @@
             <table id="tblBingo"></table>
         </div>
         <div class="py-3">
+            <a type="button" class="btn btn-primary text-decoration-none" href="./easy.html">Level 1</a>
             <a type="button" class="btn btn-primary text-decoration-none" href="./index.html">กลับหน้าหลัก</a>
+            <a type="button" class="btn btn-primary text-decoration-none" onclick="location.reload()">เล่นใหม่</a>
+            <a type="button" class="btn btn-primary text-decoration-none" href="./hard.html">Level 2</a>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
